{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "fb70d9d5-3b07-4c82-af31-ec6aaac8d239",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "6c72a316-e31c-4378-920a-9273672c9eee",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RotateTorusRight",
                    "type": "Value",
                    "id": "d3e746a5-77e3-4f7c-a386-8ebf13ad00be",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RotateTorusLeft",
                    "type": "Value",
                    "id": "155ff172-7231-4053-9d74-cf9dee7de8c1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "2a3b035b-688e-4caf-94f8-426c19c62fd9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "Wave",
                    "type": "Button",
                    "id": "2a9a9dac-8804-48f5-bf90-e7acc20002db",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SpeedUp",
                    "type": "Button",
                    "id": "c6986cb2-e637-4a8a-974e-563dd2a6d417",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "19ed71ee-7d0b-46ac-bb16-3ed428fbcbae",
                    "path": "<XInputController>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9b700240-839d-4a13-a65a-037e8a9ca640",
                    "path": "<XInputController>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateTorusRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "89fbe881-5bb6-4112-bafb-31e183a51a5d",
                    "path": "<XInputController>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateTorusLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "91fea252-ef93-4df5-a281-31aef2670e33",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d0317b84-0a72-4ec9-a6d6-513f2e86a991",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Wave",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d3a6a616-b076-42e9-aa08-a133cc81e6bb",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpeedUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}